// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when passing unknown tasks > should throw error with suggestions if find similar tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts boot
---------- Stderr ------------
[error] Task <Bold><Yellow>boot</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace.
Error: Task <Bold><Yellow>boot</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace.
    {stackTrace...}
    at file:///ROOT/lib/core/options/task-input-resolver.js:28:37
    {stackTrace...}
`;

exports[`when passing unknown tasks > should throw error with suggestions if find similar tasks 2`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts build
---------- Stderr ------------
[error] Task <Bold><Yellow>build</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace. Did you mean <Bold><Yellow>buildDev</Yellow></BoldDim>?
Error: Task <Bold><Yellow>build</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace. Did you mean <Bold><Yellow>buildDev</Yellow></BoldDim>?
    {stackTrace...}
    at file:///ROOT/lib/core/options/task-input-resolver.js:28:37
    {stackTrace...}
`;

exports[`when passing unknown tasks > should throw error with suggestions if find similar tasks 3`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts compile
---------- Stderr ------------
[error] Task <Bold><Yellow>compile</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace. Did you mean <Bold><Yellow>compileTs</Yellow></BoldDim>, <Bold><Yellow>compileJs</Yellow></BoldDim>, or <Bold><Yellow>compileCss</Yellow></BoldDim>?
Error: Task <Bold><Yellow>compile</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace. Did you mean <Bold><Yellow>compileTs</Yellow></BoldDim>, <Bold><Yellow>compileJs</Yellow></BoldDim>, or <Bold><Yellow>compileCss</Yellow></BoldDim>?
    {stackTrace...}
    at file:///ROOT/lib/core/options/task-input-resolver.js:28:37
    {stackTrace...}
`;

exports[`when passing unknown tasks > should throw error without any suggestions if not find any similar tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts unknown
---------- Stderr ------------
[error] Task <Bold><Yellow>unknown</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace.
Error: Task <Bold><Yellow>unknown</Yellow></BoldDim> not found in <Bold><Yellow>root</Yellow></BoldDim> workspace.
    {stackTrace...}
    at file:///ROOT/lib/core/options/task-input-resolver.js:28:37
    {stackTrace...}
`;
